Tracker服务器优化

--- a/src/main/resources/config/bt.tracker.properties
+++ b/src/main/resources/config/bt.tracker.properties
@@ -1,27 +1,22 @@
 #默认Tracker列表：（UDP/HTTP），默认优先使用UserDir目录下的bt.tracker.properties。
 #格式：index=AnnounceUrl
-0001=udp://tracker.uw0.xyz:6969/announce
-0002=udp://exodus.desync.com:6969/announce
-0003=udp://tracker.opentrackr.org:1337/announce
-0004=udp://tracker.opentrackr.org:1337/announce
-0005=udp://tracker.open-internet.nl:6969/announce
-0006=udp://tracker.coppersurfer.tk:6969/announce
-0007=udp://tracker.internetwarriors.net:1337/announce
-0008=udp://public.popcorn-tracker.org:6969/announce
-0009=udp://tracker.vanitycore.co:6969/announce
-0010=udp://tracker.tiny-vps.com:6969/announce
-0011=udp://thetracker.org:80/announce
+0001=udp://tracker.coppersurfer.tk:6969/announce
+0002=udp://9.rarbg.to:2710/announce
+0003=udp://9.rarbg.me:2710/announce
+0004=udp://tracker.openbittorrent.com:80/announce
+0005=udp://tracker.opentrackr.org:1337/announce
+0006=udp://tracker.internetwarriors.net:1337/announce
+0007=udp://tracker.leechers-paradise.org:6969/announce
+0008=udp://exodus.desync.com:6969/announce
+0009=udp://retracker.lanta-net.ru:2710/announce
+0010=udp://open.demonii.si:1337/announce
+0011=udp://tracker.tiny-vps.com:6969/announce
 0012=udp://bt.xxx-tracker.com:2710/announce
-0013=udp://retracker.lanta-net.ru:2710/announce
-0014=udp://open.stealth.si:80/announce
-0015=udp://tracker4.itzmx.com:2710/announce
-0016=udp://tracker1.itzmx.com:8080/announce
-0017=udp://open.demonii.si:1337/announce
-0018=udp://zephir.monocul.us:6969/announce
-0019=udp://tracker.iamhansen.xyz:2000/announce
-0020=http://tracker.city9x.com:2710/announce
-0021=http://retracker.telecom.by:80/announce
-0022=http://retracker.mgts.by:80/announce
-0023=http://open.acgtracker.com:1096/announce
-0024=http://open.acgnxtracker.com:80/announce
-0025=http://sukebei.tracker.wf:8888/announce
+0013=udp://tracker4.itzmx.com:2710/announce
+0014=udp://tracker.cyberia.is:6969/announce
+0015=udp://open.stealth.si:80/announce
+0016=udp://tracker.torrent.eu.org:451/announce
+0017=udp://denis.stalker.upeer.me:6969/announce
+0018=udp://torrentclub.tech:6969/announce
+0019=udp://tracker.moeking.me:6969/announce
+0020=udp://explodie.org:6969/announce
