--- a/SnailLauncher/snail.ini
+++ b/SnailLauncher/snail.ini
@@ -1,14 +1,8 @@
 [config]
-#运行模式
 model=-server
-#内存设置
 xms=-Xms256M
 xmx=-Xmx256M
-#设置环境变量
-java.path=./java/bin
-#设置文件编码
+java.path=./java/bin;
 file.encoding=-Dfile.encoding=UTF-8
-#设置JVM文件路径
 jvm.file.path=./java/bin/server/jvm.dll
-#设置JAR文件路径
-jar.file.path=-Djava.class.path=./snail-1.1.1.jar
+jar.file.path=-Djava.class.path=./snail-1.0.1.jar
