--- a/SnailLauncher/snail.ini
+++ b/SnailLauncher/snail.ini
@@ -4,11 +4,11 @@ model=-server
 #内存设置
 xms=-Xms256M
 xmx=-Xmx256M
-#设置环境变量
+#环境变量
 java.path=./java/bin
-#设置文件编码
+#文件编码
 file.encoding=-Dfile.encoding=UTF-8
-#设置JVM文件路径
+#JVM文件路径
 jvm.file.path=./java/bin/server/jvm.dll
-#设置JAR文件路径
+#JAR文件路径
 jar.file.path=-Djava.class.path=./snail-1.1.1.jar
