--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -31,5 +31,5 @@ acgist.dht.interval=120
 acgist.pex.interval=120
 #Tracker执行周期（秒）
 acgist.tracker.interval=120
-#单个任务Peer优化周期（秒）
+#Peer优化周期（秒）
 acgist.peer.optimize.interval=60
