--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -1,9 +1,9 @@
 #===============基本===============
-#名称
+#软件名称
 acgist.system.name=蜗牛
-#英文名称
+#软件名称（英文）
 acgist.system.name.en=Snail
-#版本
+#软件版本
 acgist.system.version=1.1.1
 #===============链接===============
 #作者
@@ -13,16 +13,16 @@ acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
 #===============端口===============
-#系统端口（AplicationServer）
+#系统服务端口
 acgist.service.port=16888
 #BT服务端口（Peer、DHT、UTP）
 acgist.torrent.port=18888
 #===============数量===============
-#单个任务Peer数量
+#单个任务Peer数量（同时下载）
 acgist.peer.size=20
-#单个任务tracker数量
+#单个任务Tracker数量
 acgist.tracker.size=50
-#任务即将完成时可以重复选择下载的剩下Piece数量
+#任务即将完成时可以重复下载的Piece数量
 acgist.piece.repeat.size=4
 #===============周期===============
 #DHT执行周期（秒）
@@ -31,5 +31,5 @@ acgist.dht.interval=120
 acgist.pex.interval=120
 #Tracker执行周期（秒）
 acgist.tracker.interval=120
-#Peer优化周期（秒）
+#Peer（连接、接入）优化周期（秒）
 acgist.peer.optimize.interval=60
