本地发现服务优化

--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -29,6 +29,8 @@ acgist.piece.repeat.size=4
 acgist.dht.interval=120
 #PEX执行周期（秒）
 acgist.pex.interval=120
+#本地发现执行周期（秒）
+acgist.lsd.interval=120
 #Tracker执行周期（秒）
 acgist.tracker.interval=120
 #Peer（连接、接入）优化周期（秒）
