--- a/SnailLauncher/snail.ini
+++ b/SnailLauncher/snail.ini
@@ -8,7 +8,10 @@ xmx=-Xmx256M
 java.path=./java/bin
 #文件编码
 file.encoding=-Dfile.encoding=UTF-8
+#JVM参数
+jvm.args.new.ratio=-XX:NewRatio=2
+jvm.args.survivor.ratio=-XX:SurvivorRatio=2
 #JVM文件路径
-jvm.file.path=./java/bin/server/jvm.dll
+jvm.path=./java/bin/server/jvm.dll
 #JAR文件路径
-jar.file.path=-Djava.class.path=./snail-1.2.0.jar
+jar.path=-Djava.class.path=./snail-1.2.0.jar
