STUN协议实现：MAPPED-ADDRESS、XOR-MAPPED-ADDRESS、ERROR-CODE

--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -15,7 +15,7 @@ acgist.system.support=https://gitee.com/acgist/snail/issues
 #===============端口===============
 #系统服务端口
 acgist.service.port=16888
-#BT服务端口（Peer、DHT、UTP）
+#BT服务端口（Peer、DHT、UTP、STUN）
 acgist.torrent.port=18888
 #===============数量===============
 #单个任务Peer数量（同时下载）
