--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -12,6 +12,9 @@ acgist.system.author=https://www.acgist.com/about
 acgist.system.source=https://gitee.com/acgist/snail
 #问题与建议
 acgist.system.support=https://gitee.com/acgist/snail/issues
+#===============STUN===============
+#STUN服务器
+acgist.system.stun.server=stun:stun.l.google.com:19302
 #===============端口===============
 #系统服务端口
 acgist.service.port=16888
