--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -14,7 +14,7 @@ acgist.system.source=https://gitee.com/acgist/snail
 acgist.system.support=https://gitee.com/acgist/snail/issues
 #===============STUN===============
 #STUN服务器
-acgist.system.stun.server=stun:stun.l.google.com:19302
+acgist.system.stun.server=stun:stun1.l.google.com:19302
 #===============端口===============
 #系统服务端口
 acgist.service.port=16888
