--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
+	<!--
+	mvn clean package deploy -P release -D skipTests
+	-D javafx.platform=win|mac|linux
+	-->
+	
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.acgist</groupId>
