配置FTP匿名用户和密码

--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -5,6 +5,11 @@ acgist.system.name=蜗牛
 acgist.system.name.en=Snail
 #软件版本
 acgist.system.version=1.2.0
+#===============FTP===============
+#FTP匿名用户
+acgist.system.ftp.user=anonymous
+#FTP匿名密码
+acgist.system.ftp.password=anonymous
 #===============链接===============
 #作者
 acgist.system.author=https://www.acgist.com/about
