--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	mvn clean package deploy -P release -D skipTests
 	-D javafx.platform=win|mac|linux
 	-->
+	<!-- 版本配置：pom.xml、snail.ini、README.md、config.sh、config.bat、system.properties -->
 	
 	<modelVersion>4.0.0</modelVersion>
 	
@@ -17,7 +18,7 @@
 	<url>https://gitee.com/acgist/snail</url>
 	
 	<name>snail</name>
-	<version>1.2.0</version>
+	<version>1.2.1</version>
 	<description>基于Java、JavaFX开发的下载工具，支持下载协议：BT（BitTorrent）、FTP、HTTP。</description>
 	<inceptionYear>2019</inceptionYear>
 
