--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ jdk:
 install: true
 
 # 编译命令
-script: mvn clean package -P release -D skipTests=true -D gpg.skip=true -D maven.source.skip=true -D maven.javadoc.skip=true
+script: mvn clean package -P release -D skipTests=true -D gpg.skip=true -D maven.source.skip=true -D maven.javadoc.skip=true -B -V
