--- a/pom.xml
+++ b/pom.xml
@@ -149,8 +149,7 @@
 				<configuration>
 					<resources>
 						<resource>
-							<!-- 可以配置：src/main/resources -->
-							<directory>./src/main/resources</directory>
+							<directory>src/main/resources</directory>
 							<!-- 配置文件属性替换：properties -->
 							<filtering>false</filtering>
 							<includes>
