--- a/src/main/resources/config/system.properties
+++ b/src/main/resources/config/system.properties
@@ -25,6 +25,8 @@ acgist.system.stun.server=stun:stun1.l.google.com:19302
 acgist.service.port=16888
 #BT服务端口（Peer、DHT、UTP、STUN）
 acgist.torrent.port=18888
+#WebServer端口
+acgist.web.server.port=8888
 #===============数量===============
 #单个任务Peer数量（同时下载）
 acgist.peer.size=20
