--- a/SnailLauncher/src/snail.ini
+++ b/SnailLauncher/src/snail.ini
@@ -1,17 +1,17 @@
 [config]
-#运行模式
+#杩愯妯″紡
 model=-server
-#内存设置
+#鍐呭瓨璁剧疆
 xms=-Xms128M
 xmx=-Xmx256M
-#环境变量
+#鐜鍙橀噺
 java.path=./java/bin
-#文件编码
+#鏂囦欢缂栫爜
 file.encoding=-Dfile.encoding=UTF-8
-#JVM参数
+#JVM鍙傛暟
 jvm.args.new.ratio=-XX:NewRatio=2
 jvm.args.survivor.ratio=-XX:SurvivorRatio=2
-#JVM文件路径
+#JVM鏂囦欢璺緞
 jvm.path=./java/bin/server/jvm.dll
-#JAR文件路径
+#JAR鏂囦欢璺緞
 jar.path=-Djava.class.path=./snail-1.2.2.jar
