--- a/src/main/resources/config/bt.dht.properties
+++ b/src/main/resources/config/bt.dht.properties
@@ -1,4 +1,5 @@
-#默认DHT节点配置：优先使用UserDir目录下的bt.dht.properties
-#格式：NodeID=host:port
+#================ DHT节点默认配置 ================#
+# 优先使用UserDir目录下的bt.dht.properties配置
+# 格式：NodeID=host:port
 32f54e697351ff4aec29cdbaabf2fbe3467cc267=router.utorrent.com:6881
 ebff36697351ff4aec29cdbaabf2fbe3467cc267=router.bittorrent.com:6881
