--- a/src/main/resources/config/bt.tracker.properties
+++ b/src/main/resources/config/bt.tracker.properties
@@ -1,5 +1,6 @@
-#默认Tracker服务器配置（UDP/HTTP）：优先使用UserDir目录下的bt.tracker.properties
-#格式：index=AnnounceUrl
+#================ Tracker服务器默认配置（UDP/HTTP） ================#
+# 优先使用UserDir目录下的bt.tracker.properties配置
+# 格式：index=AnnounceUrl
 0001=udp://tracker.coppersurfer.tk:6969/announce
 0002=udp://9.rarbg.to:2710/announce
 0003=udp://9.rarbg.me:2710/announce
