--- a/src/main/resources/config/database.properties
+++ b/src/main/resources/config/database.properties
@@ -1,14 +1,11 @@
-#数据库配置
-#数据库地址：
-# 文件（单连接）：jdbc:h2:file
-# TCP连接：jdbc:h2:tcp://IP/database
-# 内存（不能持久化）：jdbc:h2:mem:database
+#================ 数据库配置 ================#
+# 数据库地址
 acgist.database.h2.url=jdbc:h2:./database/snail
-#数据库驱动
+# 数据库驱动
 acgist.database.h2.driver=org.h2.Driver
-#数据库用户
+# 数据库用户
 acgist.database.h2.user=sa
-#数据库密码
+# 数据库密码
 acgist.database.h2.password=
-#数据库建表文件
+# 数据库建表文件
 acgist.database.h2.table.sql=/database/table.sql
