--- a/snail/pom.xml
+++ b/snail/pom.xml
@@ -4,17 +4,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
-	<!--
-	mvn -e clean package deploy -P release -D skipTests -D javafx.platform=win|mac|linux
-	-D skipTests：编译测试代码
-	-D maven.test.skip=true：跳过编译测试代码
-	-->
-	<!-- 版本配置：pom.xml、builder/config.bat、SnailLauncher/src/snail.ini、src/main/resources/config/system.properties -->
-	
 	<parent>
 		<groupId>com.acgist</groupId>
 		<artifactId>snail-parent</artifactId>
-		<version>1.3.1</version>
+		<version>${acgist.version}</version>
 		<relativePath>../</relativePath>
 	</parent>
 	
@@ -59,20 +52,6 @@
 	</properties>
 
 	<dependencies>
-		<!--
-		GUI：JavaFX
-		隐式依赖：javafx-base、javafx-controls、javafx-graphics
-		-->
-		<!--
-		编译系统和运行系统不一致时：
-		1.添加编译参数：-D javafx.platform=win|mac|linux
-		2.显式引入隐式依赖并添加属性：<classifier>${os.name}</classifier>
-		-->
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-fxml</artifactId>
-			<version>${javafx.version}</version>
-		</dependency>
 		<!-- 数据库：H2 -->
 		<dependency>
 			<groupId>com.h2database</groupId>
